--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
         "axios": "^0.26.0",
         "bootstrap": "5.1.3",
         "clsx": "^1.1.1",
-        "framer-motion": "^6.2.6",
+        "framer-motion": "6.2.6",
         "gray-matter": "^4.0.3",
+        "jquery": "^3.6.2",
         "marked": "^4.0.12",
         "moralis": "^1.5.9",
         "next": "12.0.7",
@@ -24,27 +25,34 @@
         "prop-types": "^15.7.2",
         "react": "17.0.2",
         "react-bootstrap": "^2.1.1",
+        "react-card-flip": "^1.2.0",
         "react-countdown": "^2.3.2",
         "react-countup": "^6.1.1",
-        "react-custom-scrollbars": "^4.2.1",
         "react-dom": "17.0.2",
         "react-hook-form": "^7.27.1",
         "react-icons": "^4.7.1",
         "react-intersection-observer": "^8.33.1",
+        "react-modal": "^3.16.1",
         "react-modal-video": "^1.2.8",
         "react-moralis": "^1.3.5",
+        "react-owl-carousel": "^2.3.3",
         "react-parallax-tilt": "^1.7.34",
+        "react-player": "^2.11.0",
         "react-portal": "^4.2.2",
         "react-range": "^1.8.12",
         "react-scroll": "^1.8.6",
+        "react-scrollbars-custom": "^4.1.1",
         "react-slick": "^0.28.1",
+        "react-sortablejs": "^6.1.4",
+        "react-sticky": "^6.0.3",
         "react-toastify": "^8.2.0",
         "react-tsparticles": "^1.39.0",
         "react-use": "^17.3.2",
         "remark": "^14.0.2",
         "remark-html": "^15.0.1",
         "sal.js": "^0.8.5",
-        "sass": "^1.45.0"
+        "sass": "^1.45.0",
+        "sortablejs": "^1.15.0"
     },
     "devDependencies": {
         "@babel/core": "^7.16.0",
