--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
+        "export": "next export",
         "format": "prettier --ignore-path .prettierignore --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
         "lint": "eslint --ignore-path .eslintignore . --ext ts --ext tsx --ext js --ext jsx",
         "lint:fix": "yarn format & next lint --dir src",
