--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "prop-types": "^15.7.2",
         "rc-slider": "^10.1.0",
         "react": "17.0.2",
+        "react-addons-css-transition-group": "^15.6.2",
         "react-bootstrap": "^2.1.1",
         "react-card-flip": "^1.2.0",
         "react-countdown": "^2.3.2",
