--- a/package.json
+++ b/package.json
@@ -13,9 +13,18 @@
         "clean": "rimraf node_modules .next"
     },
     "dependencies": {
+        "@cosmjs/cosmwasm-stargate": "^0.29.5",
+        "@cosmjs/proto-signing": "^0.29.5",
+        "@cosmjs/stargate": "^0.29.5",
+        "@emoji-mart/data": "^1.1.1",
+        "@emoji-mart/react": "^1.1.1",
+        "@material-ui/core": "^4.12.4",
+        "@material-ui/icons": "^4.11.3",
         "axios": "^0.26.0",
         "bootstrap": "5.1.3",
         "clsx": "^1.1.1",
+        "emoji-mart": "^5.4.0",
+        "emoji-picker-react": "^4.4.7",
         "framer-motion": "6.2.6",
         "gray-matter": "^4.0.3",
         "jquery": "^3.6.2",
@@ -48,14 +57,16 @@
         "react-slick": "^0.28.1",
         "react-sortablejs": "^6.1.4",
         "react-sticky": "^6.0.3",
-        "react-toastify": "^8.2.0",
+        "react-toastify": "^9.1.1",
         "react-tsparticles": "^1.39.0",
         "react-use": "^17.3.2",
         "remark": "^14.0.2",
         "remark-html": "^15.0.1",
         "sal.js": "^0.8.5",
         "sass": "^1.45.0",
-        "sortablejs": "^1.15.0"
+        "socket.io-client": "^4.5.4",
+        "sortablejs": "^1.15.0",
+        "timeago.js": "^4.0.2"
     },
     "devDependencies": {
         "@babel/core": "^7.16.0",
